[gd_scene load_steps=11 format=2]

[ext_resource path="res://SpaceElements/Weapons/Photon/Photon.png" type="Texture" id=1]
[ext_resource path="res://SpaceElements/Weapons/Photon/Photon.gd" type="Script" id=2]
[ext_resource path="res://SpaceElements/Weapons/Photon/photon_launch.wav" type="AudioStream" id=3]
[ext_resource path="res://Effects/HaloCircle/HaloCircle.tscn" type="PackedScene" id=4]
[ext_resource path="res://SpaceElements/Weapons/Photon/photon_explosion.wav" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 12.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2, 8.5 )

[sub_resource type="Animation" id=5]
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplodeAudioPlayer:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Explosion/CollisionShape2D:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Explosion/HaloCircle:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 10.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Explosion/HaloCircle:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Explosion/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Explosion/HaloCircle:radius")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Explosion/HaloCircle:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "impact"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Explosion/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Explosion/HaloCircle:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Explosion/CollisionShape2D:shape:radius")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 10.0, 80.0, 100.0, 150.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Explosion/HaloCircle:size")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 20.0, 160.0, 200.0, 300.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("ExplodeAudioPlayer:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Explosion/HaloCircle:radius")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 12.0, 100.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Explosion/HaloCircle:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="CircleShape2D" id=6]

[node name="Photon" type="KinematicBody2D" groups=["weapon"]]
collision_layer = 4
collision_mask = 0
script = ExtResource( 2 )
speed = 1500.0
damage_caused = 3

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
one_shot = true
autostart = true

[node name="LaunchAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.5

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -0.5 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/impact = SubResource( 7 )

[node name="ExplodeAudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Explosion" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 50

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explosion"]
visible = false
shape = SubResource( 6 )
disabled = true

[node name="HaloCircle" parent="Explosion" instance=ExtResource( 4 )]
visible = false
scale = Vector2( 0.3125, 0.3125 )
size = 10.0
halo_color = Color( 0.137255, 0.694118, 0.862745, 1 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Explosion" to="." method="_on_Explosion_body_entered"]
